Fix padding on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ ol > li {
   }
 
   #main-doc {
-    padding: 30px 50px 0 50px;
+    padding: 30px 30px 0 30px;
   }
 
   .code-block {
